<resources>
    <string name="app_name">Ampflower</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="menu_library">Library</string>
    <string name="menu_settings">Settings</string>
    <string name="a_floating_action_buttom">A Floating Action buttom</string>
    <string name="ampflower">Ampflower</string>
    <string name="msg_loading">Loading...</string>
    <string name="background_image">Background image</string>
    <string name="arrow_down">Arrow down</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="_0_00">0:00</string>
    <string name="timer">Timer</string>
    <string name="previous">Previous</string>
    <string name="play">Play!</string>
    <string name="next">Next</string>
    <string name="volume">Volume</string>
    <string name="playlist">Playlist</string>
    <string name="server_status">Server Status</string>
    <string name="ampache_url">Ampache URL</string>
    <string name="ampache_username">Ampache Username</string>
    <string name="ampache_password">Ampache Password</string>
    <string name="unavailable">Unavailable</string>
    <string name="server_status_colon">Server Status:</string>
    <string name="test">Test!</string>
    <string name="save_server_settings">Save Server Settings</string>
    <string name="login_denied">Login Denied</string>
    <string name="online">Online</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="album_art">Album Art</string>
    <string name="album_title">Album Title</string>
    <string name="artist">Artist</string>
    <string name="connecting">Connecting</string>
    <string name="songs">Songs</string>
    <string name="search">Search</string>
    <string name="_0_selected">0 Selected</string>
    <string name="clear">Clear</string>
    <string name="title">Title</string>
    <string name="choose_songs">Choose Songs</string>
    <string name="songs_selected">%d Songs selected</string>
    <string name="select_all">Select All</string>
    <string name="play_selected">Play Selected</string>
    <string name="channel_name">AmpflowerChannel</string>
    <string name="channel_desc">Ampflower Media Player</string>
    <string name="duration">%02d:%02d</string>
    <string name="currentTime">%02d:%02d</string>
    <string name="songsQuantity">%d songs</string>
    <string name="msg_no_media">No media</string>
    <string name="view_playlist">View Playlist</string>
    <string name="select_to_drag">Select to drag</string>
    <string name="recent_artists">Recent Artists</string>
    <string name="newest_albums">Newest albums</string>
    <string name="most_frequent_artists">Most frequent artists</string>
    <string name="recently_played">Recently played</string>
    <string name="random_albums">Random albums</string>
    <string name="more">More</string>
    <string name="overflow">Overflow</string>
    <string name="top_rated_artists">Top-rated Artists</string>
    <string name="trending_albums">Trending Albums</string>
    <string name="recently_played_songs">Recently-played songs</string>
    <string name="launcher">Launcher</string>
    <string name="retry">Retry</string>
</resources>