<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ar.com.strellis.ampflower.ui.home.HomeFragment"
        android:label="@string/ampflower"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_library"
        android:name="ar.com.strellis.ampflower.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ar.com.strellis.ampflower.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_server_status"
        android:name="ar.com.strellis.ampflower.ui.serverstatus.ServerStatusFragment"
        android:label="@string/server_status"
        tools:layout="@layout/fragment_server_status"/>
</navigation>