<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="999"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_server_status"
        android:orderInCategory="100"
        android:title="@string/server_status"
        android:iconTint="@color/white"
        android:iconTintMode="src_over"
        android:icon="@drawable/ic_cloud_unavail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="101"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>
</menu>