<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:longClickable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_item_song_playlist_album_art"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/album_art" />

    <LinearLayout
        android:id="@+id/row_item_holder_song_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/list_item_song_playlist_draggable"
        android:layout_toEndOf="@+id/list_item_song_playlist_album_art"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_song_playlist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_item_song_playlist_album_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/artist"
            android:textSize="11sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/list_item_song_playlist_draggable"
        android:src="@drawable/ic_drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:buttonTint="@color/colorAccent"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/select_to_drag" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#333" />

</RelativeLayout>