<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:clipToPadding="false"
    tools:context="ar.com.strellis.ampflower.ui.serverstatus.ServerStatusFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp">

        <LinearLayout
            android:id="@+id/ampache_server_status_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_status_colon"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/button_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/server_status"
                android:padding="0dp"
                android:src="@drawable/ic_cloud_unavail"
                app:tint="#FF000000"
                android:backgroundTint="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:textSize="25sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ampache_server_status_card" />

        <RelativeLayout
            android:id="@+id/ampache_url_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ampache_server_status_card"

            android:clickable="true"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ampache_url"
                />

            <EditText
                android:id="@+id/ampache_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:autofillHints="@string/ampache_url"
                android:hint="@string/ampache_url"
                android:inputType="textUri"
                android:textColor="#FFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ampache_url_card" />

        <RelativeLayout
            android:id="@+id/ampache_username_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ampache_url_card"

            android:clickable="true"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ampache_username"
                />

            <EditText
                android:id="@+id/ampache_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:autofillHints="@string/ampache_username"
                android:hint="@string/ampache_username"
                android:inputType="text"
                android:textColor="#FFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ampache_username_card" />

        <RelativeLayout
            android:id="@+id/ampache_password_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ampache_username_card"

            android:clickable="true"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ampache_password"
                />

            <EditText
                android:id="@+id/ampache_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/ampache_password"
                android:fontFamily="sans-serif"
                android:hint="@string/ampache_password"
                android:inputType="textPassword"
                android:textColor="#FFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ampache_password_card" />

        <RelativeLayout
            android:id="@+id/ampache_button_test_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ampache_password_card"
            android:clickable="true"
            android:padding="5dp">
            <Button
                android:id="@+id/ampache_button_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ampache_button_test_card" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ampache_button_test_card"
            android:id="@+id/ampache_button_save_server_settings_card"
            android:padding="5dp">
            <Button
                android:id="@+id/ampache_button_save_server_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_server_settings"
                />
        </RelativeLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>