<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseSongsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:clipToPadding="false"
    android:foregroundTint="@color/purple_500"
    tools:context=".ui.choose_songs.ChooseSongsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_to_playlist_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/number_selected_songs_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/number_selected_songs_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_margin_layout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/number_selected_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="3dp"
            android:text="@string/_0_selected"
            android:textAlignment="gravity"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/play_selected_songs_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="3dp"
            android:paddingEnd="16dp"
            android:text="@string/clear"
            app:srcCompat="@drawable/ic_play_arrow_white"
            android:textColor="#BCBCBC"
            android:textSize="17sp"
            tools:ignore="RelativeOverlap"
            android:contentDescription="@string/play_selected" />

    </RelativeLayout>

    <View
        android:id="@+id/bottom_margin_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>